added more to purpose

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,11 +20,11 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>Giving people a place to white water raft where its impossible.</p>
+    <p>Giving people a place to white water raft where its impossible. Custom built river rafting sites are made so people who live in dry places can white water raft too!</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Great for families and those who love adventure. Multiple courses for people of varying fear levels. Kids 13+</p>
+    <p>Great for families and those who love adventure. Multiple courses for people of varying adventure levels. Kids 13+</p>
     <!-- change this -->
 
     <hr />
