--- a/icechallenge/index.html
+++ b/icechallenge/index.html
@@ -18,10 +18,10 @@
             <p>---President Nelson</p>
         </div>
         <ol>
-            1. Faith in the Lord Jesus Christ<br />
-            2. Repentance<br />
-            3. Baptism by immersion for the remission of sins<br />
-            4. Laying on of hands for the gift of the Holy Ghost
+            <li>Faith in the Lord Jesus Christ</li>
+            <li>Repentance</li>
+            <li>Baptism by immersion for the remission of sins</li>
+            <li>Laying on of hands for the gift of the Holy Ghost</li>
         </ol>
     </div>
 </body>
