--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -94,16 +94,16 @@
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <a href="../index.html">Home</a>
-      <a href="#">Page2</a>
+      <a href="index.html">Home</a>
+      <a href="#">About Us</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
     <div class="sitemap">
-      <div class="../index.html">Home</div>
+      <div class="index.html">Home</div>
       <div class="sm-page2">
-        [Page2]
+        About Us
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -120,8 +120,8 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
-
+    <h3>About Us</h3>
+    <img src="images/WWR About Us.png" alt="White Water Rafting About Us Wireframe">
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
