Finished wwr subpage

--- a/wwr/aboutus.html
+++ b/wwr/aboutus.html
@@ -18,9 +18,30 @@
         <a href="aboutus.html">Contact Us</a>
     </nav>
 </header>
-<main>
 
+<main>
+    <div id="gridau">
+        <div id="heroau">
+            <img id="grand" src="images/mountainshero.jpg" alt="mountains">
+        </div>
+        <section id="h1au">
+            <h1>About Us</h1>
+        </section>
+        <div class="p1img">
+            <img id="img1" src="images/desert1.jpg" alt="desert river">
+        </div>
+        <div id="p1msg">
+            <p>We have always wondered how we can bring water activities to hot dry places like deserts. With rivers and lakes being few and far between in these ares it is hard for people to enjoy the cool water. This is how we got the idea to start Desert Rafting, a business that brings the water to the desert.</p>
+        </div>
+        <div class="p2img">
+            <img id="img2" src="images/manriver2.jpg" alt="desert river">
+        </div>
+        <div id="p2msg">
+            <p>We go to dry places full of people and we build our own rivers to raft on. This way we can take river rafting to anyone, anywhere, and ecpecially in the places that need it the most. We wanted to build many courses so that everyone can enjoy the rapids, big or small, adventerous or not, there is a river for you.</p>
+        </div>
+    </div>
 </main>
+
 <footer>
     <p>Dry Oar &copy; 2023 - Brennen Stowell</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
