--- a/wwr/aboutus.html
+++ b/wwr/aboutus.html
@@ -31,12 +31,14 @@
             <img id="img1" src="images/desert1.jpg" alt="desert river">
         </div>
         <div id="p1msg">
+            <h2>What We Saw</h2>
             <p>We have always wondered how we can bring water activities to hot dry places like deserts. With rivers and lakes being few and far between in these ares it is hard for people to enjoy the cool water. This is how we got the idea to start Desert Rafting, a business that brings the water to the desert.</p>
         </div>
         <div class="p2img">
             <img id="img2" src="images/manriver2.jpg" alt="desert river">
         </div>
         <div id="p2msg">
+            <h2>What We Did</h2>
             <p>We go to dry places full of people and we build our own rivers to raft on. This way we can take river rafting to anyone, anywhere, and ecpecially in the places that need it the most. We wanted to build many courses so that everyone can enjoy the rapids, big or small, adventerous or not, there is a river for you.</p>
         </div>
     </div>
