--- a/wwr/aboutus.html
+++ b/wwr/aboutus.html
@@ -15,7 +15,7 @@
         <a href="index.html">Home</a>
         <a href="aboutus.html">About Us</a>
         <a href="site-plan-rafting.html">Site Plan</a>
-        <a href="aboutus.html">Contact Us</a>
+        <a href="contactus.html">Contact Us</a>
     </nav>
 </header>
 
